--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="./css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <div id = "top-blue-color">
+    <div id = "instagram-login"> 
+      <img src="./images/brand.png" alt="Instagram Logo">
+      <button class = "login-button" type="button"><img class ="house" src="./images/home.png" alt="Home button"><a href="#">Log in</a></button>
+    </div>
+  </div>
+  <div id = "bottom-white-color">
+    <div id ="couple-phones">
+      <img src="./images/phones.png" alt="Phones">
+    </div>
+    <div id = "frame">
+        <h2> Capture and Share the World's Moments</h2>
+       <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+          <p>Oh yeah, did we mention it's free?</p>
+    <div id ="market-links">
+      <img src="./images/badge-android.png" alt="badge-android">
+      <img id ="apple-market" src="./images/badge-iphone.png"   alt="badge-iphone">
+    </div>
+    </div>
+    <div >
+      <div id="footer">
+      <ul>
+      <li><a href="#">ABOUT US</a></li>
+      <li><a href="#">SUPPORT</a></li>
+      <li><a href="#">BLOG</a></li>
+      <li><a href="#">PRESS</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">JOBS</a></li>
+      <li><a href="#">PRIVACY</a></li>
+      <li><a href="#">TEARMS</a></li>
+      <li>@INSTAGRAM</li>
+    </ul>
+  </div>
+      
+      
+    </div>
+  </div>
+  </body>
 </html>
