--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link rel="stylesheet" type="text/css" href="css/reset.css">
 </head>
+
 <body>
-  Instagram
+  <section>
+    <div class="container div-left">
+      <div class="col-left">
+        <img src="images/phones.png" alt="phones">
+      </div>
 
-  Capture and Share the World's Moments
+      <div class="div-right container">
+        <div class="container">
+          <img src="images/brand.png" alt="phones"><button type="button"><img class="col-left" src="images/home.png " width="22px" height="20px"
+              alt="home">
+            <p>Log in</p>
+          </button>
+        </div>
+        <div class="container-right ">
+          <div class="article">
+            <h1>Capture and Share the World's Moments</h1>
+            <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+            <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
+              it's
+              that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            </p>
+            <p> Oh yeah, did we mention it's free?</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            <div class="col-left brand-links">
+              <img id="apple-link" src="images/badge-iphone.png" alt="Download on the App Store">
+              <img src="images/badge-android.png" alt="Get it on Google Play">
+            </div>
+            
+          </div>
 
-  Oh yeah, did we mention it's free?
+        </div>
 
-  Download on the App Store
-  Get it on Google Play
+      </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    </div>
 
-  &copy; 2014 Instagram
+  </section>
+  <div class="clear-fixed"></div>
+  <footer>
+    <div> 
+        <ul>
+            <li><a href="#"> ABOUT US</a></li>
+            <li><a href="#">SUPPORTT</a></li>
+            <li><a href="#">BLOG</a></li>
+            <li><a href="#">PRESS</a></li>
+            <li><a href="#">API</a></li>
+            <li><a href="#">JOBS</a></li>
+            <li><a href="#">PRIVACY</a></li>
+            <li><a href="#">TERMS</a></li>
+            <li class="copyright" >&copy; 2014 INSTAGRAM</li>
+          </ul>
+    </div>
+    
+  </footer>
+
 </body>
+
 </html>
