--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <section class="main">
+    <section class="half-content">
+      <section>
+        <img class="col-phones" src="images/phones.png" alt="phone-image">
+      </section>
+      <section class="col-text">
+        <div class="text-content">
+        <img id="brand" src="images/brand.png" alt="logo">
+        <h2>Capture and Share <br> the World's Moments</h2>
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          </p>
+        <p id="main-text"> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+            Oh yeah, did we mention it's free?</p>
+            <div class="download-images">
+              <img src="images/badge-iphone.png" alt="iphone">
+              <img src="images/badge-android.png" alt="android">
+            </div>
+          </div>
+      </section>
+      </section>
+  <section class="links">
+  <ul>
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+  </ul>
+</section>
+</section>
+<footer>
+    &copy; 2014 Instagram
+</footer>
 </body>
 </html>
