--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,50 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="blue-background"></div>
+  <div class="container">
+  <img class="phones" src="images/phones.png" alt="Instagram on phone">
+  <div class="content">
+    <div class="content-header">
+      <img class="brand" src="images/brand.png" alt="Instagram">
+      <a href="#" class="login-button"><img src="images/home.png" alt="home"> Log in</a>
+    </div>
+    <div class="clearfix"></div>
+  <div class="text">
+    <h2>
+  Capture and Share
+  </h2>
+  <h2>the World's Moments
+  </h2>
 
-  Capture and Share the World's Moments
+  <p>Instagram is a <span class="important">fast</span>, <span class="important">beautiful</span> and <span class="important">fun</span> way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <p>Oh yeah, did we mention it's free?</p>
+  <img class="download" src="images/badge-iphone.png"><img class="download" src="images/badge-android.png">
+  </div>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  </div>
+  </div>
+  <div class="clearfix"></div>
+  <footer class="footer">
+    <ul>
+      <li class="footer-link">About Us</li>
+      <li class="footer-link">Support</li>
+      <li class="footer-link">Blog</li>
+      <li class="footer-link">Press</li>
+      <li class="footer-link">API</li>
+      <li class="footer-link">Jobs</li>
+      <li class="footer-link">Privacy</li>
+      <li class="footer-link">Terms</li>
+      <li class="copyright">&copy; 2014 Instagram</li>
+    </ul> 
+  </footer>
+  
 </body>
 </html>
