--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,57 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="main.css">
 </head>
+
 <body>
-  Instagram
+  <div class="background-blue Move">
+   <div class="inline" >
+     <img class="logoInstagram" src="./images/brand.png" alt="logo-Instagram">
+   </div>
 
-  Capture and Share the World's Moments
+   <div class="inline-Border">
+     <a href="#"><img class="inlinePosition" src="./images/home.png" alt="home">
+     <p class="logIn">Log in</p></a>
+   </div>
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div>
+    <img class="phone" src="./images/phones.png" alt="phone-image">
+  </div>
+<img class="framePosition" src="./images/frame.png">
+<div class="text">
+  <h2>Capture and Share<br> the World's Moments</h2>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <p class="pSize">Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life<br> with friends and family.<br></p>
 
-  Oh yeah, did we mention it's free?
+  <p class="pSize">Take a picture or video, choose a filter to transform its look<br> and feel, then post to Instagram &mdash; it's that easy. 
+    You can<br> even share to Facebook, Twitter, Tumblr and more. It's a<br> new way to see the world.<br></p>
 
-  Download on the App Store
-  Get it on Google Play
+  <p class="pSize">Oh yeah, did we mention it's free?</p>
+</div>
+<div class="buttons-Download">
+  <a href="#"><img src="./images/badge-iphone.png" alt="Download on the App Store"></a>
+  <a class="marginA" href="#"><img src="./images/badge-android.png" alt="Get it on Google Play"></a>
+</div>
+<footer>
+  <div>
+<nav class="alignNav">
+  <ul>
+      <li><a>About Us</a></li>
+      <li><a>Support</a></li>
+      <li><a>Blog</a></li>
+      <li><a>Press</a></li>
+      <li><a>API</a></li>
+      <li><a>Jobs</a></li>
+      <li><a>Privacy</a></li>
+      <li><a>Terms</a></li>
+  </ul>  
+</nav>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+<span>&copy; 2014 Instagram</span>
+</div>
+</footer>
 
-  &copy; 2014 Instagram
 </body>
 </html>
