--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,55 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <header>
+    <!--empty header ;)-->
+  </header>
+  <div class='container'>
+          <section>
+                <div id='phone'>
+                  <img src="images/phones.png" alt="">
+                </div>
+              <div class='box-1'>
+                <div id='logo'>
+                    <img src="images/brand.png" alt="brand" id="phone">
+                    <button><img src="images/home.png" alt=""> Log in</button>
+                </div>
+                <div id='content'>
 
-  Capture and Share the World's Moments
+                  <h2>Capture and Share the World's Moments</h2> 
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+                  <p> Instagram is a <strong>fast</strong>,<strong>beautiful</strong>  and <strong>fun</strong>way to share your life with friends and family. <br>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+                    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+                  
+                    Oh yeah, did we mention it's free?
+                  </p>
+                  <img src="images/badge-iphone.png" alt="appstore">
+                  <img src="images/badge-android.png" alt="googleplay">
+                </div>
+              </div> 
+          </section>
+    </div>          
+<div class='clearfix'></div>
+<footer> 
+  <div class="container">
+    <ol>
+      <li> About Us</li>
+      <li> Support</li>
+      <li> Blog</li>
+      <li> Press</li>
+      <li> API</li>
+      <li> Jobs</li>
+      <li> Privacy</li>
+      <li> Terms</li>
+      <li>&copy; 2014 Instagram</li>
+    </ol>
+  </div> 
+  </footer>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  
 </body>
 </html>
