--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,12 +2,27 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
+  <div class="divOne">
+  <div class="imageOne"><img src="images/brand.png" alt="Instagram image"></div>
+
+<div class="buttonDiv">
+  <button class="button">
+    <img src="images/home.png" alt="Instagram image" class="imageTwo">
+    <p class="float">Log in</p>
+  </button>
+  </div>
+  
+</div>
+<div class="divTwo">
+
+  <div class="imageThree"><img src="images/phones.png" alt="Instagram image">"</div>
+  <div><img src="images/frame.png" alt="Instagram image">"</div>
   Capture and Share the World's Moments
-
+  
   Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
@@ -25,7 +40,7 @@
   Jobs
   Privacy
   Terms
-
+</div>
   &copy; 2014 Instagram
 </body>
 </html>
