--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/reset.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <section id="central"> 
+    <img class="phones" src="images/phones.png"> <!-- IZQUIERDA -->
+    <div class="main"> <!-- DERECHA -->
+      <!-- DERECHA : top-->
+      <img src="images/brand.png" class="brand">
+      <!-- METEEEEEEEEEER BOTOOOOOOOOON-->
+      
+      <div> <!-- DERECHA : middle-->
+        <img class="" src="images/frame.png">
+        <div class="folio">
+          <h1>Capture and Share <br> the World's Moments</h1>
+          <p><br>Instagram is a fast, beautiful and fun way to share your life with friends and family.<br></p>
+          <p>Take a picture or video, choose a filter to transform its look and feel,
+          then post to Instagram &mdash; it's that easy. You can even share to Facebook, 
+          Twitter, Tumblr and more. It's a new way to see the world.<br></p>
+          <p>Oh yeah, did we mention it's free?<br></p>
+        </div>
+      </div>
+      <div class="badge"> <!-- DERECHA : floor-->
+        <img src="images/badge-iphone.png">
+        <img src="images/badge-android.png">
+      </div>
+    </div>
+    <div class="clearfix"></div>
+  </section>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <footer>
+    <ul class="">
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 </body>
 </html>
