--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
+
 <body>
-  Instagram
+  <div class="logo">
+    <img class="insta-logo" src="./images/brand.png" width = 320px height = 85px alt="Instagram Logo">
+    <button class="home"><img src="./images/home.png" alt="Home Button"> Log in</button>
+  </div>
 
-  Capture and Share the World's Moments
+<div class="white-back-drop">
+  <div class="heading">Capture and Share<br>the World's Moments</div>
+  <p class="para1">Instagram is a fast, beautiful and fun way to share your life<br>with friends and family.</p>
+  <p class="para2">Take a picture or video, choose a filter to transform its look<br>and feel, then post to Instagram &mdash; it's that easy. You can<br>even share to Facebook, Twitter, Tumblr and more. It's a<br>new way to see the world.</p>
+  <p class="para3">Oh yeah, did we mention it's free?</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="download-buttons">
+      <img src="./images/badge-iphone.png" alt="Download iPhone">
+      <img class="button2" src="./images/badge-android.png" alt="Download Android">
+  </div>
+</div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <nav class="bottom-nav">
+      <a class="about" href="https://www.instagram.com/about/us/">About Us</a>
+      <a href="https://help.instagram.com/">Support</a>
+      <a href="https://instagram-press.com/">Blog</a>
+      <a href="https://www.instagram.com/developer/">Press</a>
+      <a href="https://www.instagram.com/developer/">API</a>
+      <a href="https://www.instagram.com/about/jobs/">Jobs</a>
+      <a href="https://help.instagram.com/519522125107875">Privacy</a>
+      <a href="https://help.instagram.com/581066165581870">Terms</a>
+      <a class="cr">&copy; 2014 Instagram</a>
+  </nav>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
