finished html/css instgramclone w/o refactoring

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,46 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <section class ="top">
+    <img id ="brand" src="./images/brand.png">
+    <button class="btn"><img id ="home" src="./images/home.png">Log In</button>
+</section>
+<section class="middle">
+<img id="phone" src="./images/phones.png">
+<img id ="frame" src="./images/frame.png"/>
+<h3>Capture and Share <br> the World's Moments</h3>
+  <div> 
+  <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
 
-  Capture and Share the World's Moments
+  <p>Take a picture or video, choose a filter to transform its look
+     and feel, then post to Instagram &mdash; it's that easy. You can
+      even share to Facebook, Twitter, Tumblr and more. It's a
+       new way to see the world.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <p>Oh yeah, did we mention it's free?</p>
+  <img id ="iphone" src="./images/badge-iphone.png">
+  <img src="./images/badge-android.png">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  </div>
 
-  Oh yeah, did we mention it's free?
+</section>
+<section class="footer">
+  <ul>
+  <li>About Us</li>
+  <li>Support</li>
+  <li>Blog</li>
+  <li>Press</li>
+  <li>API</li>
+  <li>Jobs</li>
+  <li>Privacy</li>
+  <li>Terms</li>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <li id="copyright">&copy; 2014 Instagram</li>
+  </ul>
+</section>
 </body>
 </html>
