--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<link rel="stylesheet" type="text/css" href="css/main.css">
+<link rel="stylesheet" type="text/css" href="css/reset.css">
+
 <head>
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <section class="imagen-fondo">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  </section>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <section class="descripcion-instagram">
 
-  Oh yeah, did we mention it's free?
+    <div class="imagen-tlfn">
 
-  Download on the App Store
-  Get it on Google Play
+    </div>
+    <div class="texto">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <div class="encabezado">
+        <div class="boton-login">
 
-  &copy; 2014 Instagram
+          <p class="login"><b>Login in</b></p>
+        </div>
+      </div>
+      <div class = "clearfix"></div>
+
+      <div class="cuerpo-texto">
+        <h1 class="titulo">Capture and Share the World's Moments</h1>
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
+        </p>
+
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that
+          easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
+      <div class="app-ios">
+      </div>
+      <div class="app-android">
+      </div>
+
+    </div>
+
+
+  </section>
+
+  <section class="pie-foto">
+    <b>About Us</b>
+    <b>Support</b>
+    <b>Blog</b>
+    <b>Press</b>
+    <b>API</b>
+    <b>Jobs</b>
+    <b>Privacy</b>
+    <b>Terms</b>
+    <div class="copyright">
+      &copy; 2014 Instagram
+    </div>
+
+  </section>
+
+
 </body>
+
 </html>
