--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,41 @@
-<!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
+<head>	
+  <title>Instagram</title>	 
+  <link rel="stylesheet" href="./css/main.css">
+</head>	
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
-</html>
+  <section class= "bigsection"> 
+   
+   <img src="./images/phones.png" alt = "2iphones"></div>
+   <div class = "rightPart">  
+    <div class = "brandImages">  
+         <img src="./images/brand.png" alt = "Instagram logo">
+         <button class = "button"></button><img src="./images/home.png" alt = "Home page"><b>Log in</b></button>
+    </div>
+     <div class = "text">
+       <div class= "inerText">
+        <h2>Capture and Share the World's Moments</h2>
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+         <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        Oh yeah, did we mention it's free?</p>
+      </div>
+     </div>
+     <div class="buttons">
+        <img src="./images/badge-iphone.png" alt = "Download on the App Store">
+        <img src="./images/badge-android.png" alt = "Get it on Google Play">
+    </div>
+  </div>
+</section>
+<footer>
+    <a href= "Link">  <b>ABOUT US</b></a>
+    <a href= "Link"> <b>SUPPORT</b></a>
+    <a href= "Link"><b>BLOG</b></a>
+    <a href= "Link"><b>PRESS</b></a>
+    <a href= "Link"> <b>API</b></a>
+    <a href= "Link"> <b>JOBS</b></a>
+    <a href= "Link"><b>PRIVACY</b></a>
+    <a href= "Link"> <b></b></a>
+    &copy; 2014 Instagram
+      </footer>
+</body>  
+</html>  
