--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -41,7 +41,7 @@
 </section>
 </section>
 <footer>
-    &copy; 2014 Instagram
+  <p class="footer-p">&copy; 2014 Instagram</p>
 </footer>
 </body>
 </html>
