--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -13,7 +13,8 @@
   </div>
   <div class="bot-log">
     <form>
-      <button>Log in</button>
+      
+      <button><img src="images/home.png">Log in</button>
     </form> 
   </div>
 
@@ -23,13 +24,15 @@
 
 
   <div class="texto">
-    <h4>Capture and Share the World's Moments</h4>
+    <h3>Capture and Share<br> the World's Moments</h3>
 
       <p> 
-        Instagram is a fast, beautiful and fun way to share your life with friends and family.
-  
-        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-  
+        Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.<br>
+      </p>  
+      <p>
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
+      </p>
+      <p>
         Oh yeah, did we mention it's free?
       </p>  
   </div>
