--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -16,9 +16,10 @@
 
       <div class="div-right container">
         <div class="container">
-          <img src="images/brand.png" alt="phones"><button type="button"><img class="col-left" src="images/home.png " width="22px" height="20px"
+          <img src="images/brand.png" alt="phones">
+          <button type="button"><img class="col-left home-image" src="images/home.png " width="22px" height="20px"
               alt="home">
-            <p>Log in</p>
+            <p class="button-login">Log in</p>
           </button>
         </div>
         <div class="container-right ">
