--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="css/main.css" type="text/css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <img class="phones" src="/images/badge-iphone.png" alt="phones">
+  <img class="ig-logo" alt="Instagram logo" src="/images/brand.png">
+  <button class="btn"><img class="" alt="log in buton" src="/images/home.png"> Log in</button>
+  
+<div class="right fading-bc">  
+  <h3> Capture and Share <br>the World's Moments</h3>
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.<br><br>
+  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
+  Oh yeah, did we mention it's free?</p>
+</div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  
+<img class="apple-logo" src="/images/badge-iphone.png" alt="download on the App Store">
+<img class="andriod-logo" src="/images/badge-android.png" alt="get it on Google Play">
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <footer>
+      <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+          <li class="copyright">&copy; 2014 Instagram</li>
+      </ul>
+  </footer>
 </body>
+
 </html>
