--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,45 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <aside>
+      <img src="images/phones.png">
+  </aside>
+  <section>
+  <div class="brand">
+    <img src="images/brand.png">
+    <button class="button"><img src="images/home.png"><b>Log in</b></button>
+  </div>
+  <div class="frame">
+    <div class="framelimits">
+        <h1><b>Capture and Share the World's Moments</b></h1>
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+  
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          
+        <p>Oh yeah, did we mention it's free?</p>
+    </div>
+    </div>
+  <div class="badge">
+    <img src="images/badge-iphone.png">
+    <img src="images/badge-android.png">
+  </div>
+  </section>
+  <div class="clear"></div>
+   <footer>
+      <ul class="footer">
+          <li>ABOUT US</li>
+          <li>SUPPORT</li>
+          <li>BLOG</li>
+          <li>PRESS</li>
+          <li>API</li>
+          <li>JOBS</li>
+          <li>PRIVACY</li>
+          <li>TERMS</li>
+        </ul>
+    <div class="copy">&copy; 2014 Instagram</div>   
+   </footer>
 </body>
 </html>
