--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,38 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="movilesfoto">
+    <img src="images/phones.png"/>
+  </div>
+  <div class="derecha">
+    <div class="arribaderecha">
+      <img src="images/brand.png"/>
+      <button><img src="images/home.png"/><b class="especifico">Log In</b></button>
+    </div>
+    <section class="abajoderecha">
+      <h2>Capture and Share <br>the World's Moments</h2>
+      <p>Instagram is a <b>fast, beautifulb and fun</b> way to share your life with friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p>
+      <a href="https://www.apple.com/es/"><img src="images/badge-iphone.png"/>
+     <a href="https://play.google.com/store" ><img class="foto3" src="images/badge-android.png"/></a>
+    </section>
+  </div>
+  <section class="footer">
+    <ul>
+      <li><a href="">About Us</a></li>
+      <li><a href="">Support</a></li>
+      <li><a href="">log</a></li>
+      <li><a href="">Press</a></li>
+      <li><a href="">API</a></li>
+      <li><a href="">Jobs</a></li>
+      <li><a href="">Privacy</a></li>
+      <li><a href="">Terms</a></li>
+      <li class="copyright">&copy; 2014 Instagram</a></li>
+    </ul>
+  </section>
 </body>
 </html>
