First commit. instagram html, css

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,51 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+        <header>
+            <div class="blueBackround"></div>
+        </header>
+        <div class="container">
+          <div class="content">
+          <div class="firstColumn">
+      <div class="phones">
+        <div class="telephoneImage"><img src="images/phones.png" alt="phones"></div>
+      </div>
+    </div>
+      <div class="secondColumn">
+          <div class="instagramLogo">
+              <div class="insaLogo"><img src="images/brand.png" alt="phones"></div>
+              <button class="loginButton"><img src="images/home.png" alt="phones"><p>Log In</p></button>
+            </div>
+          <div class="mainText">
+            <h3>Capture and Share the World's Moments</h3>
+            <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+          </div>
+      </div>
+    </div>
 
-  Capture and Share the World's Moments
+      <footer>
+<ul>
+  <li>About Us</li>
+  <li>Support</li>
+  <li>Blog</li>
+  <li>Press</li>
+  <li>API</li>
+  <li>Jobs</li>
+  <li>Privacy</li>
+  <li> Terms</li>
+  <li>&copy; 2014 Instagram</li>
+</ul>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      </footer>
+    </div>
+        </div> 
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <!--Download on the App Store
+  Get it on Google Play-->
 </body>
 </html>
