--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -6,9 +6,11 @@
 </head>
 <body>
     <div class="topDiv">
+      <div class="tryingThis">
       <img src="images/brand.png" alt="brand logo" id="brandImage">
      <button><img src="./images/home.png" alt="log in pic" class="loginImage">Log in</button>
-  </div>
+    </div>  
+    </div>
   <div class="iphoneImage">
     <img src="images/phones.png" class="phoneImages">
   </div>
