--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,17 +2,30 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel= "stylesheet" href="css/main.css" >
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+ <div class="background1">
+  
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <img class="phones.png"  src="images/phones.png" alt="2 Iphones">
+ 
+ 
+  <img class="brand.png"  src="images/brand.png" alt="Instagram logo">
+ 
+  
+  
+  <div class="frame.png">
+    <h2> Capture and Share the World's Moments</h2>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+   <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Oh yeah, did we mention it's free?
+   <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+   <p>Oh yeah, did we mention it's free?</p>
+
+  </div>
 
   Download on the App Store
   Get it on Google Play
