--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,12 +2,21 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+
+  <!--logo / top-half-->
+<div class="top-half">
+  <img class="ig-logo" src="images/brand.png" alt="Instragram logo image">
+
+  <p>Log in</p>
+  <img class="home-icon" src="images/home.png" alt="tiny home image">
+</div>
+
+  <img src="../images/frame.png" alt="">
 
   Capture and Share the World's Moments
-
   Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
@@ -27,5 +36,6 @@
   Terms
 
   &copy; 2014 Instagram
+
 </body>
 </html>
