--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -11,7 +11,7 @@
   <div class='container'>
           <section>
                 <div id='phone'>
-                  <img src="images/phones.png" alt="">
+                  <img src="images/phones.png" alt="phone">
                 </div>
               <div class='box-1'>
                 <div id='logo'>
@@ -38,14 +38,14 @@
 <footer> 
   <div class="container">
     <ol>
-      <li> About Us</li>
-      <li> Support</li>
-      <li> Blog</li>
-      <li> Press</li>
-      <li> API</li>
-      <li> Jobs</li>
-      <li> Privacy</li>
-      <li> Terms</li>
+      <li> <a href="#">About Us</a></li>
+      <li> <a href="#">Support</a></li>
+      <li> <a href="#">Blog</a></li>
+      <li> <a href="#">Press</a></li>
+      <li> <a href="#">API</a></li>
+      <li> <a href="#">Jobs</a></li>
+      <li> <a href="#">Privacy</a></li>
+      <li> <a href="#">Terms</a></li>
       <li>&copy; 2014 Instagram</li>
     </ol>
   </div> 
