Finalized instagram clone exercise day 2 of week 1

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,63 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="../starter-code/css/main.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+<div class="main-container">
+  <div class="phones"> 
+    <img src="../starter-code/images/phones.png" alt="phones">
+  </div>
+  <div class="card-container">
+      <div class="card-header">
+        <div class="logo">
+          <img src="../starter-code/images/brand.png" alt="brand">
+        </div>
+        <div class="login-container">
+          <a href="#" class="login-button">
+            <img src="../starter-code/images/home.png" alt="log-in">
+            <span>&nbsp Log in</span>
+          </a> 
+      </div>
+  </div>
+    <div class="card">
+      <article>
+        <h1>
+          Capture and Share the World's Moments
+        </h1>
+          Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+          <br><br>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <br><br>
+          Oh yeah, did we mention it's free?<br>
+      </article>
+    </div>
+    <div class="button-footer">
+        <div class="download-button">
+          <img src="../starter-code/images/badge-iphone.png" alt="download-ios">
+        </div>
+        <div class="download-button">
+          <img src="../starter-code/images/badge-android.png" alt="download-android"> 
+        </div>
+    </div>
+  </div>
+    <div class="phones2"> 
+      <img src="../starter-code/images/phones.png" alt="phones">
+    </div>
+</div>
+  <footer>  
+    <ul>
+      <li>About us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </footer> 
 </body>
 </html>
