--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,51 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="blue-block"></div>
+  <div class="phones">
+    <img src="images/phones.png" alt="phones">
+  </div>
+  <section class="content">
+    <div>
+      <div class="brand">
+        <img src="images/brand.png" alt="brand">
+      </div>
+      <div class="log-in">
+        <div id="home">
+          <img src="images/home.png" alt="brand">
+        </div>
+        <div class="header-text">
+          <p>Log In</p>
+        </div>
+      </div>
+    </div>
+    <div class="text-box">
+      <h2>Capture and Share the World's Moments</h2>
+      <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        
+          Oh yeah, did we mention it's free?</p>
+      <img src="images/badge-iphone.png" alt="Download on the App Store" class="download">
+      <img src="images/badge-android.png" alt="Get it on Google Play" class="download">
+    </div>
+  </section>
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li id="grey">&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 </body>
 </html>
