--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <div class="top-header">
 
-  Capture and Share the World's Moments
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="header">
+    <div class="header-phone">
+      <img src="images/phones.png" alt="phones photo">
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="header-right">
+      <div class="header-logos">
+        <div class="insta-left">
+          <img src="images/brand.png" alt="instagram logo">
+        </div>
+        <div class="home-right">
 
-  Oh yeah, did we mention it's free?
+          <div class="home-logo">
+            <img src="images/home.png" alt="home logo">
+          </div>
 
-  Download on the App Store
-  Get it on Google Play
+          <div class="log-in">
+            <span>Log in</span>
+          </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+        </div>
+      </div>
 
-  &copy; 2014 Instagram
+      <div class="white-box">
+        <div class="white-box-words">
+          <h2>Capture and Share the World's Moments</h2> 
+        </div>
+
+        <div class="white-box-words">
+          <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family. </p>
+          <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </div>
+      </div>
+      <div class="badges">
+          <div class="badges-left">
+            <img src="images/badge-iphone.png" alt="iphone badge">
+          </div>
+          <div class="badges-right">
+              <img src="images/badge-android.png" alt="android badge">
+          </div>
+        </div>
+    </div>
+  </div>
+
+  <footer class="footer">
+      <ul class="footer-list">
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li> <span>&copy; 2014 Instagram</span>  </li>
+      </ul>
+  </footer>
 </body>
 </html>
