--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+  <div id="container">
+    <div id="content">
+      <div class="box">
+        <img alt="phone" src="images/phones.png" />
+      </div>
+      <div class="box">
+        <div class="logo-login">
+          <div class="logo">
+            <img alt="logo" src="images/brand.png"/>
+          </div>
+          <div class="login">
+              <button class="button" type="button"><img alt="login" src="images/home.png"/>Log in</button>
+          </div>
+        </div>
+        <div class="text">
+            <h1>Instagram, Capture and Share the World's Moments</h1>
+            <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+        </div>
+        <div class="download">
+          <img alt="apple" src="images/badge-iphone.png"/>
+          <img alt="android" src="images/badge-android.png"/>
 
-  Capture and Share the World's Moments
+        </div>
+      </div>
+    </div>
+    <nav class="foot-nav">
+        <a href="About Us">About Us</a>
+        <a href="Support">Support</a>
+        <a href="Blog">Blog</a>
+        <a href="Press">Press</a>
+        <a href="API">API</a>
+        <a href="Jobs">Jobs</a>
+        <a href="Privacy">Privacy</a>
+        <a href="Terms">Terms</a>
+        <p>&copy; 2014 Instagram</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    </nav>    
+  </div>
 </body>
 </html>
