Finish Instagram assignment

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,49 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel ="stylesheet" type="text/css" href="./css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <div id="maincontainer">
+      <div class ="BlueBackground"></div>
+      <div class ="whiteBackground"></div>
+      <div class="subcontainer">
+        <section id ="phones">
+            <img src="images/phones.png">
+        </section>
+        <header id ="header">
+            <nav>
+              <ul class="menu">
+                <li class="instagramLogo"><a href="#"></a><img src="./images/brand.png"></a></li>
+                <li class="logIn"><a href="#"></a><button type="button"><img src="./images/home.png" class="homeImage"><span class="textButton">Log in</span></button></a></li>
+              </ul>
+            </nav>
+        </header>
+        <article id="textArticle">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>Instagram is a <bold>fast</bold>, <bold>beautiful</bold> and <bold>fun</bold> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </article>
+        <div id="buttons">
+        <a href="#"><img src="images/badge-iphone.png" class="apple"></a>  
+        <a href="#"><img src="images/badge-android.png" class="google"></a> 
+        </div>
+        <div class="clearfix"></div>
+        <footer id ="footerNav">
+          <ul class="menuDown">
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Support</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Press</a></li>
+            <li><a href="#">Api</a></li>
+            <li><a href="#">Jobs</a></li>
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Terms</a></li>
+            <li class="copyrightInstagram">&copy; 2014 INSTAGRAM</li>
+          </ul>
+        </footer>
+      </div>
+  </div>
 </body>
 </html>
