--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">  
+  <link rel="stylesheet" type="text/css" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="big-container">
+    <img src="images/phones.png" alt="Phones picture" class="phones">
+    <div class="little-container">
+        <div class="logo-button-container">
+          <img src="images/brand.png" alt="Instagram logo" class="logo-image">
+          <button type="button" class ="button"><img src="images/home.png" alt="home button" class="button-img"><span class="button-text">Log in</span></button>
+        </div>
+        <div class="middle-container background-image">
+          <h2>Capture and Share<br>the World's Moments</h2>
+          <div class="spacer">
+          <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          </div>
+          <div class="links-container">
+          <img src="images/badge-iphone.png" alt="Apple store">
+          <img src="images/badge-android.png" alt="Play store" class="image-right">
+          </div>
+        </div>
+    </div>
+  </div>
+  <footer>
+    <div class="spacer footer-box">
+      <a href="#" class="footer-items">About Us</a>
+      <a href="#" class="footer-items">Support</a>
+      <a href="#" class="footer-items">Blog</a>
+      <a href="#" class="footer-items">Press</a>
+      <a href="#" class="footer-items">API</a>
+      <a href="#" class="footer-items">Jobs</a>
+      <a href="#" class="footer-items">Privacy</a>
+      <a href="#" class="footer-items">Terms</a>
+      <span class="copyright">&copy; 2014 Instagram</span>
+    </div>
+  </footer>
 </body>
 </html>
