--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head><link rel="stylesheet" type="text/css" href="../starter-code/css/main.css">
   <title>Instagram</title>
 </head>
+
+
+
+
 <body>
-  Instagram
+    <div class="top-content"><img alt="Instagram-Logo" src="images/brand.png">
+      <button><img alt="home-instagram" src="../starter-code/images/home.png"> <span>Log in</span>
+      </button><div class="box-text">
+          <h2>Capture and Share<br> the World's Moments</h2> 
+            <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram - it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <img alt="apple-store-image" src="images/badge-iphone.png">
+            <img alt="android-store-image" src="images/badge-android.png">
+          </div>
+    </div>
+    <div class="phones"><img alt="picture-of-phones" src="images/phones.png">
+    </div>
+    <div class="clear-float"></div>
 
-  Capture and Share the World's Moments
+    <div class="clear-float"></div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+      <footer>
+   About Us Support Blog Press API Jobs Privacy Terms 2014 Instagram
+</footer>
 </body>
 </html>
