--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,50 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div id="section-1">
+      <img src="./images/phones.png" alt="phones-image">
+  </div>
+  <div id="section-2">
+    <div>
+        <img src="./images/brand.png" alt="brand-image">
+        <div id="home-b">
+          <img src="./images/home.png" alt="home-image" id="home-img">
+          <div id="login-text">Log in</div>
+        </div>
+    </div>
+    <div id="box-botons">
+      <h2 class="header-box-bottons">Capture and Share the World's Moments</h2>
+      <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
+      <p>Oh yeah, did we mention it's free?</p>
+      <div id="apple-id">
+          <img src="./images/badge-iphone.png" alt="apple-image">
+      </div>
+      <div id="google-id">
+          <img src="./images/badge-android.png" alt="android-image">
+      </div>
+    </div>
+  </div>
+  <div id="section-3">
+    <div>
+    <ul id="list">
+      <li class="list-item"><a href=''>About Us</a></li>
+      <li class="list-item"><a href=''>Support</a></li>
+      <li class="list-item"><a href=''>Blog</a></li>
+      <li class="list-item"><a href=''>Press</a></li>
+      <li class="list-item"><a href=''>API</a></li>
+      <li class="list-item"><a href=''>Jobs</a></li>
+      <li class="list-item"><a href=''>Privacy</a></li>
+      <li class="list-item"><a href=''>Terms</a></li>
+    </ul>
+    </div>
+    <div class="list-item">
+      &copy; 2014 Instagram
+    </div>
+  </div>
 </body>
 </html>
