pt instagramClone Noe David Gonzalez

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,46 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <section>
+    <div class="phones">
+    </div>
+    <div class="content">
+      <div class="instagram-header">
+          <div class="instagram-cam"></div> 
+          <div class="instagram-login">
+            <div class="instagram-home"></div>
+            Log in 
+          </div>
+      </div>
+      <div class="content-description">
+        <h1>Capture and Share<br> the World's Moments</h1>
 
-  Capture and Share the World's Moments
+        <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+        <p>Oh yeah, did we mention it's free?</p>
+        <a href="https://itunes.apple.com/mx/app/instagram/id389801252?mt=8"><img src="images/badge-iphone.png" alt="Download on the App Store"></a> 
+        <a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=es_419">
+        <img src="images/badge-android.png" alt="Get it on Google Play"></a>
+      </div>
+    </div>
+  </section>
+<footer>
+  <ul>
+    <li><a href="#">About Us</a></li>
+    <li><a href="#">Support</a></li>
+    <li><a href="#">Blog</a></li>
+    <li><a href="#">Press</a></li>
+    <li><a href="#">API</a></li>
+    <li><a href="#">Jobs</a></li>
+    <li><a href="#">Privacy</a></li>
+    <li><a href="#">Terms</a></li>
+    <li><a href="#" class="copyRight">&copy; 2014 Instagram</a></li>
+  </ul>
+</footer>
 </body>
 </html>
