--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,50 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  Instagram
+  <div class="container">
+    <div class="content-info">
+      <div class="content">
+        <div class="mockup">
+          <img src="images/phones.png" />
+        </div>
+        <div class="info">
+          <div class="log">
+            <div class="logo">
+              <img src="images/brand.png" />
+            </div>
+            <div class="login">
+              <button>
+                <img src="images/home.png" /> 
+                <p>Log in</p>
+              </button>
+            </div>
+          </div>
+          <div class="text">
+            <h1>Capture and Share the World's Moments</h1>
+            <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+          </div>
+          <img src="images/badge-iphone.png" />
+          <img src="images/badge-android.png" />
+        </div>
+      </div>
+      <nav>
+        <a href="">About Us</a>
+        <a href="">Support</a>
+        <a href="">Blog</a>
+        <a href="">Press</a>
+        <a href="">API</a>
+        <a href="">Jobs</a>
+        <a href="">Privacy</a>
+        <a href="">Terms</a>
+        <a href="">&copy; 2014 Instagram</a>
+      </nav>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    </div>
+  </div>
 </body>
 </html>
