--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,45 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+<div id="home-bg"></div>
+<div class="content">
+<img src="images/phones.png" alt="phones">
+<div class="info-block">
+  <div>
+    <img src="images/brand.png" alt="Instagram">
+    <div class="login-button">
+      <img src="images/home.png" alt="home button">
+      <h4>Log in</h4>
+    </div>
+  </div>
+<div>
+  <h1>Capture and Share the World's Moments</h1>
+  <ul>
+    <li>Instagram is a fast, beautiful and fun way to share your life with friends and family.</li>
+    <li>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</li>
+    <li>Oh yeah, did we mention it's free?</li>
+  </ul>
+  <div>
+  <img src="images/badge-iphone.png" alt="badge iphone">
+  <img src="images/badge-android.png" alt="badge android">
+  </div>
+</div>
+</div>
+</div>
+<nav>
+  <a href="">About Us</a>
+  <a href="">Support</a>
+  <a href="">Blog</a>
+  <a href="">Press</a>
+  <a href="">API</a>
+  <a href="">Jobs</a>
+  <a href="">Privacy</a>
+  <a href="">Terms</a>
+  <a>&copy; 2014 Instagram</a>
+</nav> 
+  
 </body>
 </html>
