--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,80 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+
+  <link
+    rel="stylesheet"
+    type="text/css"
+    href="./css/main.css"
+  ></link>
 </head>
+
 <body>
-  Instagram
+  <section class="section1">
+    <div class="firstDiv"></div>
+  </section>
 
-  Capture and Share the World's Moments
+  <section
+    id="id"
+    class="section2"
+  >
+    <div>
+      <div class="iphones">
+        <img
+          src="./images/phones.png"
+          alt="phones"
+        >
+      </div>
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="right-content">
+      <div class="instagram-logo">
+          <img src="./images/brand.png">
+      </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <button class="logea">
+      <span class="log-in">
+      
+      </span>
+      <span id="texto-log">
+       <strong> Log In </strong>
+      </span>
+    </button>
+      
+    </div>
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
+    <div class="text">
+        <h2>
+          Capture and Share the World's Moments
+        </h2>
+        <p>
+          Instagram is a
+          <strong>fast</strong>,
+          <strong>beautiful</strong>and 
+          <strong>fun</strong>
+          way to share your life with friends and family.
+          <br>
+          <br>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more.
+           It's a new way to see the world.
+           <br>
+           <br>
+          Oh yeah, did we mention it's free?
+        </p>
+      </div>
+  
+      <span class="app-store">
+        <img src="images/badge-iphone.png">
+      </span>
+  
+      <span class="google-play">
+        <img src="images/badge-android.png">
+      </span>
+    </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+
+  </section>
 </body>
 </html>
